<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.SnowVolf.gikgoogle.MainActivity">

   <EditText android:id="@+id/zapros"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/enter_queue"
       android:maxLines="6"
       style="@android:style/Widget.DeviceDefault.Light.EditText"
       android:layout_toLeftOf="@+id/share_intent"
       android:layout_toStartOf="@+id/share_intent" />

    <ImageButton
        android:id="@+id/share_intent"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zapros"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_insert_link"
        android:text="@string/go_to" />

    <ImageButton
        android:text="@string/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/share_intent"
        android:layout_toLeftOf="@+id/share_intent"
        android:layout_toStartOf="@+id/share_intent"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/copy"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_content_copy"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small" />

    <ImageButton
        android:text="@string/clear"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/clear"
        android:src="@drawable/ic_clear_all"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frame_container"
        android:text="@string/history"
        android:textSize="16sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        />

    <FrameLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/share_intent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_container">
 </FrameLayout>
</RelativeLayout>
